[gd_scene load_steps=2 format=3 uid="uid://dp8k3nxq2w7fm"]

[ext_resource type="Script" uid="uid://b1iu7ai3xkb5o" path="res://scenes/player/player_ship.gd" id="1_player"]

[node name="PlayerShip" type="CharacterBody2D" groups=["player"]]
collision_layer = 1
collision_mask = 14
script = ExtResource("1_player")
shoot_cooldown = 0.35

[node name="ShipBody" type="Polygon2D" parent="."]
color = Color(0.15, 0.2, 0.3, 1)
polygon = PackedVector2Array(0, -20, 12, 15, 6, 10, -6, 10, -12, 15)

[node name="ShipOutline" type="Line2D" parent="."]
points = PackedVector2Array(0, -20, 12, 15, 6, 10, -6, 10, -12, 15, 0, -20)
width = 2.0
default_color = Color(0.4, 0.6, 0.9, 1)

[node name="EngineGlow" type="Polygon2D" parent="."]
visible = false
color = Color(1, 0.6, 0.2, 0.9)
polygon = PackedVector2Array(-4, 10, 0, 22, 4, 10)

[node name="CollisionShape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -20, 12, 15, 6, 10, -6, 10, -12, 15)

[node name="ProjectileSpawn" type="Marker2D" parent="."]
position = Vector2(0, -25)
